<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@id/navigation_search_users"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />
  <item
        android:id="@id/navigation_post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_add_post" />

    <item
        android:id="@id/navigation_liked_posts"
        android:icon="@drawable/ic_liked_post"
        android:title="@string/title_liked_posts" />

    <item
        android:id="@id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>